# py3Settings

./: README.md  TODO.txt  docs.txt  setup.cfg  {'my_option' modules.attributes.Att.txt
dist.old/: py3settings-2.0.0-py3-none-any.whl
src/py3SettingRed/: __init__.py  proxy.py  utils.py
src/py3Settings/: __init__.py  example.py  exampleSelfDotDict.json  file.py  main.py  proxy.py  utils.py
src/py3Settings/examples/: init.py  innerdir  setdir.py  v2 copy.py  v2.1.py  v2.py
src/py3Settings/examples/v3/: innerdir  setdir.py  template.py  v3.py  v3Load.py
src/py3Settings/examplesBlue/: cli.py
src/py3Settings/modules/: attributes.py
src/py3SettingsBlue/: file.py  main.py  proxy.py  utils.py
src/py3SettingsBlue/examples/: v2.py
src/py3SettingsBlue/examples/v3/: adJson.py  template.py
src/py3settings.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/setDir/: LICENSE  pyproject.toml  setup.cfg
src/setDir/src/: __init__.py  setdir.py
tests/: algo.json  algov3.json  sure.ad.json  sure.json  surev3.json
