[metadata]
name = py3settings
version = 3.1.0
author = Albert Calasanz Sallen
author_email = acalasanzs@gmail.com
description = A powerful json file settings manager for Python 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/acalasanzs/py3Settings
project_urls =
    Bug Tracker = https://github.com/acalasanzs/py3Settings/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = py3Settings, py3Settings.modules
python_requires = >=3.6